--- a/2021-spring/homeworks-practice/homework-practice-11-metric-learning/homework-practice-11-metric-learning.ipynb
+++ b/2021-spring/homeworks-practice/homework-practice-11-metric-learning/homework-practice-11-metric-learning.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "id": "n-2MpmJQIK1A"
    },
@@ -48,6 +48,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import os\n",
     "import random\n",
     "\n",
@@ -67,9 +68,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Couldn't find program: 'bash'\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
     "\n",
@@ -84,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "id": "tHSHdsD5I5yb"
    },
@@ -97,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "id": "ZucJvTWFKB5l"
    },
@@ -120,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "id": "suK0rywXY_gp"
    },
@@ -150,13 +159,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "id": "UOb-jgKDxCpl"
    },
    "outputs": [],
    "source": [
-    "#  (*・ω・)ﾉ"
+    "k_all = [5, 10, 20, 50, 100, 200]\n",
+    "knn_clfs = []\n",
+    "acc_test, acc_train, top3acc_train, top3acc_test = [], [], [], []\n",
+    "\n",
+    "for k in k_all:\n",
+    "    clf = KNeighborsClassifier(n_neighbors=k).fit(X_train, y_train)\n",
+    "    knn_clfs.append(clf)\n",
+    "    \n",
+    "    acc_test.append(scorer(clf, X_test, y_test))\n",
+    "    top3acc_test.append(top_3_accuracy_score(y_test, clf.predict_proba(X_test)))\n",
+    "    \n",
+    "    acc_train.append(scorer(clf, X_train, y_train))\n",
+    "    top3acc_train.append(top_3_accuracy_score(y_train, clf.predict_proba(X_train)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>k</th>\n",
+       "      <th>ACC Train</th>\n",
+       "      <th>ACC Test</th>\n",
+       "      <th>TOP3 Train</th>\n",
+       "      <th>TOP3 Test</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0.691073</td>\n",
+       "      <td>0.513131</td>\n",
+       "      <td>0.960632</td>\n",
+       "      <td>0.761616</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10</td>\n",
+       "      <td>0.654965</td>\n",
+       "      <td>0.550505</td>\n",
+       "      <td>0.922518</td>\n",
+       "      <td>0.813131</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20</td>\n",
+       "      <td>0.631394</td>\n",
+       "      <td>0.545455</td>\n",
+       "      <td>0.898445</td>\n",
+       "      <td>0.821212</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>50</td>\n",
+       "      <td>0.610582</td>\n",
+       "      <td>0.538384</td>\n",
+       "      <td>0.875878</td>\n",
+       "      <td>0.830303</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>100</td>\n",
+       "      <td>0.578736</td>\n",
+       "      <td>0.517172</td>\n",
+       "      <td>0.855065</td>\n",
+       "      <td>0.833333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>200</td>\n",
+       "      <td>0.559428</td>\n",
+       "      <td>0.506061</td>\n",
+       "      <td>0.843029</td>\n",
+       "      <td>0.823232</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     k  ACC Train  ACC Test  TOP3 Train  TOP3 Test\n",
+       "0    5   0.691073  0.513131    0.960632   0.761616\n",
+       "1   10   0.654965  0.550505    0.922518   0.813131\n",
+       "2   20   0.631394  0.545455    0.898445   0.821212\n",
+       "3   50   0.610582  0.538384    0.875878   0.830303\n",
+       "4  100   0.578736  0.517172    0.855065   0.833333\n",
+       "5  200   0.559428  0.506061    0.843029   0.823232"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame({'k' : k_all,\n",
+    "              'ACC Train' : acc_train,\n",
+    "              'ACC Test' : acc_test,\n",
+    "              'TOP3 Train': top3acc_train,\n",
+    "              'TOP3 Test': top3acc_test})"
    ]
   },
   {
@@ -183,14 +313,76 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: metric_learn in c:\\users\\zhan\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (0.6.2)\n",
+      "Requirement already satisfied: scipy in c:\\users\\zhan\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from metric_learn) (1.8.0)\n",
+      "Requirement already satisfied: scikit-learn>=0.20.3 in c:\\users\\zhan\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from metric_learn) (1.0.2)\n",
+      "Requirement already satisfied: numpy in c:\\users\\zhan\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from metric_learn) (1.22.3)\n",
+      "Requirement already satisfied: joblib>=0.11 in c:\\users\\zhan\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from scikit-learn>=0.20.3->metric_learn) (1.1.0)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\zhan\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from scikit-learn>=0.20.3->metric_learn) (3.1.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install metric_learn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'metric_learn'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [41]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmetric_learn\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m LMNN\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'metric_learn'"
+     ]
+    }
+   ],
+   "source": [
+    "from metric_learn import LMNN"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "id": "9_uXUMeexCpl"
    },
    "outputs": [],
    "source": [
-    "# ⊂(￣▽￣)⊃"
+    "k_all = [5, 10, 20, 50, 100, 200]\n",
+    "knn_clfs = []\n",
+    "acc_test, acc_train, top3acc_train, top3acc_test = [], [], [], []\n",
+    "\n",
+    "for k in k_all:\n",
+    "    clf = KNeighborsClassifier(n_neighbors=k).fit(X_train, y_train)\n",
+    "    knn_clfs.append(clf)\n",
+    "    \n",
+    "    acc_test.append(scorer(clf, X_test, y_test))\n",
+    "    top3acc_test.append(top_3_accuracy_score(y_test, clf.predict_proba(X_test)))\n",
+    "    \n",
+    "    acc_train.append(scorer(clf, X_train, y_train))\n",
+    "    top3acc_train.append(top_3_accuracy_score(y_train, clf.predict_proba(X_train)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -296,7 +488,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
